--- a/src/Kit.css
+++ b/src/Kit.css
@@ -2,6 +2,7 @@
 
   --kit-color-white: #fff;
   --kit-color-black: #000;
+  --kit-color-light-gray: #f8f9fa;
 
   --kit-color-info: #007bff;
   --kit-color-success: #28a745;
