--- a/src/UI/Input/Input.scss
+++ b/src/UI/Input/Input.scss
@@ -1,20 +1,3 @@
-/*
-<div className={`kit-input ${className}`} style={{ width }}>
-    {children && <div className="kit-input-label" style={{ width: widthLabel }}>{children}</div>}
-    <div className="kit-input-field" style={{ width: widthInput }}>
-        <input 
-            type={type === 'password' && showPassword ? 'text' : type} 
-            {...rest} 
-        />
-        {type === 'password' && (
-            <div className="kit-input-eye" onClick={togglePassword}>
-                <FontAwesomeIcon icon={showPassword ? faEye : faEyeSlash} />
-            </div>
-        )}
-    </div>
-</div>
-*/
-
 
 .kit-input {
     display: flex;
@@ -61,6 +44,56 @@
 
         }
     }
+}
 
 
+/*
+<div className={`kit-select ${className}`}>
+            {label && <div className="kit-select-label" style={{ width: widthLabel }}>{label}</div>}
+            <div className="kit-select-field" style={{ width }}>
+                <select {...rest} />
+            </div>
+        </div>
+*/
+
+.kit-select {
+    display: flex;
+    flex-direction: row;
+    gap: var(--kit-space-sm);
+    margin: var(--kit-space-xs);
+
+    .kit-select-label {
+        font-size: var(--kit-font-size-md);
+        font-weight: var(--kit-font-weight-bold);
+        display: flex;
+        align-items: center;
+    }
+
+    .kit-select-field {
+        position: relative;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        gap: var(--kit-space-xs);
+        padding: var(--kit-space-sm) ;
+        border: 1px solid var(--kit-color-black);
+        border-radius: var(--kit-border-radius);
+        transition: var(--kit-transition);
+
+        .kit-select-icon {
+            color: var(--kit-color-black);
+            font-size: var(--kit-font-size-md);
+        }
+
+        select {
+            width: 100%;
+            font-size: var(--kit-font-size-md);
+            border: none;
+            outline: none;
+
+            option {
+                font-size: var(--kit-font-size-md);
+            }
+        }
+    }
 }
