--- a/src/UI/Modal/Modal.scss
+++ b/src/UI/Modal/Modal.scss
@@ -45,7 +45,7 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         max-width: 90%;
         max-height: 90%;
-        overflow: auto;
+        // overflow: auto;
 
         border: 3px solid;
     }
@@ -96,6 +96,7 @@
         justify-content: center;
         min-height: 100px;
         min-width: 200px;
+        overflow: auto;
     }
 
     &-footer {
