--- a/src/UI/NavBar/NavBar.scss
+++ b/src/UI/NavBar/NavBar.scss
@@ -20,13 +20,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0.5rem 1rem;
     background-color: #333;
     color: #fff;
     font-size: 1.2rem;
     font-weight: 500;
     position: relative;
-    z-index: 1000;
+    z-index: 100;
 
     .kit-navbar-title {
         font-size: 1.5rem;
@@ -49,10 +49,19 @@
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-    }
 
-    .kit-navbar-link {
-        margin: 0 10px;
+        .kit-navbar-link {
+            margin: 0 10px;
+
+            a {
+                color: #fff;
+                text-decoration: none;
+            }
+
+            a:hover {
+                font-weight: 700;
+            }
+        }
     }
 
     .kit-navbar-burger {
