--- a/src/UI/Modal/Modal.css
+++ b/src/UI/Modal/Modal.css
@@ -36,6 +36,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  display: flex;
+  flex-direction: column;
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: var(--kit-border-radius);
@@ -64,11 +66,11 @@
   border-bottom: 3px solid;
   border-color: inherit;
 }
-.kit-modal-title {
+.kit-modal-header .kit-modal-title {
   font-size: var(--kit-font-size-lg);
   font-weight: bold;
 }
-.kit-modal-close {
+.kit-modal-header .kit-modal-close {
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -76,8 +78,10 @@
   color: var(--kit-color-danger);
 }
 .kit-modal-body {
+  display: flex;
+  flex-direction: column;
   padding: var(--kit-space-sm);
-  min-height: 100px;
+  min-height: 50px;
   min-width: 200px;
   overflow: auto;
 }
