--- a/src/UI/OrderListModal/OrderListModal.scss
+++ b/src/UI/OrderListModal/OrderListModal.scss
@@ -36,20 +36,14 @@
         border-radius: 5px;
         cursor: move;
         transition: background-color 0.3s;
-
-        &::before {
-            content: '☰';
+        
+        &-icon {
             margin-right: 1rem;
+            touch-action: none;
         }
 
         &:hover {
             background-color: #f9f9f9;
         }
-
-        
     }
-
-    
-
-
 }
